syntax = "proto3";

package pixur.tables;

option go_package = "tables";

import "pixur.org/pixur/schema/pixur.proto";
import "pixur.org/pixur/schema/db/model/model.proto";

message PicRow {
  option (pixur.db.model.tab_opts) = {
    name: "Pics"
    key: {
      key_type: PRIMARY
      col: "id"
    }
    key: {
      name: "IndexOrder"
      key_type: INDEX
      col: "index_order"
    }
  };

  int64 id = 1 [(pixur.db.model.field_opts) = {col_fn: "IdCol"}];

  int64 index_order = 2 [(pixur.db.model.field_opts) = {col_fn: "IndexOrderCol"}];

  reserved 3;
  reserved "is_hidden";

  pixur.Pic data = 4;
}

message TagRow {
  option (pixur.db.model.tab_opts) = {
    name: "Tags"
    key: {
      key_type: PRIMARY
      col: "id"
    }
    key: {
      name: "Name"
      key_type: UNIQUE
      col: "name"
    }
  };

  int64 id = 1 [(pixur.db.model.field_opts) = {col_fn: "IdCol"}];

  string name = 2 [(pixur.db.model.field_opts) = {col_fn: "NameCol"}];;

  pixur.Tag data = 3;
}

message PicTagRow {
  option (pixur.db.model.tab_opts) = {
    name: "PicTags"
    key: {
      key_type: PRIMARY
      col: "pic_id"
      col: "tag_id"
    }
  };

  int64 pic_id = 1 [(pixur.db.model.field_opts) = {col_fn: "PicIdCol"}];
  int64 tag_id = 2 [(pixur.db.model.field_opts) = {col_fn: "TagIdCol"}];

  pixur.PicTag data = 3;
}

message PicIdentRow {
  option (pixur.db.model.tab_opts) = {
    name: "PicIdents"
    key: {
      key_type: PRIMARY
      col: "pic_id"
      col: "type"
      col: "value"
    }
    key: {
      name: "Ident"
      key_type: INDEX
      col: "type"
      col: "value"
    }
  };

  int64 pic_id = 1 [(pixur.db.model.field_opts) = {col_fn: "PicIdCol"}];

  pixur.PicIdent.Type type = 2 [(pixur.db.model.field_opts) = {col_fn: "TypeCol"}];

  bytes value = 3 [(pixur.db.model.field_opts) = {col_fn: "ValueCol"}];

  pixur.PicIdent data = 4;
}

message PicCommentRow {
  option (pixur.db.model.tab_opts) = {
    name: "PicComments"
    key: {
      key_type: PRIMARY
      col: "pic_id"
      col: "comment_id"
    }
    key: {
      name: "CommentId"
      key_type: INDEX
      col: "comment_id"
    }
  };
  
  int64 pic_id = 1 [(pixur.db.model.field_opts) = {col_fn: "PicIdCol"}];
  
  int64 comment_id = 2 [(pixur.db.model.field_opts) = {col_fn: "CommentIdCol"}];
  
  pixur.PicComment data = 3;
}

message UserRow {
  option (pixur.db.model.tab_opts) = {
    name: "Users"
    key: {
      key_type: PRIMARY
      col: "id"
    }
    key: {
      name: "Ident"
      key_type: UNIQUE
      col: "ident"
    }
  };

  int64 id = 1 [(pixur.db.model.field_opts) = {col_fn: "IdCol"}];
  
  string ident = 2 [(pixur.db.model.field_opts) = {col_fn: "IdentCol"}];
  
  pixur.User data = 3;
}
